@@ -52,7 +52,7 @@ public class Async1 extends HttpServlet {
                 }
             }
         };
-        Thread t = new Thread(run);
+        Thread t  = Thread.ofVirtual().unstarted(run);
         t.start();
     }
 
